Revision history for WWW::Mechanize

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

{{$NEXT}}

1.82      2016-10-06 23:00:30-04:00 America/Toronto
[ENHANCEMENTS]
- Added strict_forms flag to submit_form() which sets the HTML::Form strict flag (Gareth Tunley)

[FIXED]
- Fixed tests which tried to access HTTPS urls when LWP::Protocol::https wasn't
  installed (Olaf Alders).  Reported by Slaven Rezić.  See
  https://github.com/libwww-perl/WWW-Mechanize/issues/54

1.81      2016-10-06 08:52:44-04:00 America/Toronto
========================================
[FIXED]
-  Work around bug in HTTP::Cookies that is triggered on reload().  See
   https://rt.cpan.org/Public/Bug/Display.html?id=75897 (Gianni Ceccarelli)

1.80      2016-09-24 22:38:27-04:00 America/Toronto
========================================
[FIXED]
- Fixes behaviour of submit_form() when multiple filters have been supplied (Ed
  Avis)

1.79      2016-09-16 23:53:48-04:00 America/Toronto
========================================
[ENHANCEMENTS]
- Added form_with() method. (Martin Sluka)

1.78      2016-08-08 09:18:59-04:00 America/Toronto
========================================
[OTHER CHANGES]
- No changes specific to this version.  First non-develepment release in about a year.

1.77      2016-08-05 12:50:12-04:00 America/Toronto (TRIAL RELEASE)
========================================
[TESTS]
- Skip Wikipedia tests if LWP::Protocol::https is not installed.

1.76      2016-07-29 12:17:25-04:00 America/Toronto (TRIAL RELEASE)
========================================
[ENHANCEMENTS]
- Added history() and history_count() methods. (Ricardo Signes)
- click_button() now accepts ids. (Olaf Alders)
- Add a more descriptive error message when ->request is called without a
  parameter. (Max Maischein)

[DOCUMENTATION]
- Document that form_id warns in addition to returning undef when a form cannot
  be found. (Olaf Alders)