@@ -4,7 +4,7 @@ license = Perl_5
 main_module = lib/WWW/Mechanize.pm
 copyright_holder = Andy Lester
 copyright_year   = 2004-2016
-version = 1.82
+version = 1.83
 
 [@Author::OALDERS]
 -remove = CheckChangesHasContent
